tests/NormalTests/paczka1/fuzzy1/21112170.err
Error in line 4: SyJd89h A441 22,7
Error in line 6: SyJd89h S306 95,7
Error in line 16: c7clQN A76 57,8
Error in line 15: S750 S750 13,5
Error in line 19: ok1UVr A76 41,3
Error in line 20: c7clQN S750 37,6
